rybbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rybbit
  namespace: rybbit
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
      - rybbit.lag0.com.br
    secretName: lag0-rybbit-certificate
  rules:
  - host: rybbit.lag0.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rybbit
            port:
              number: 5230
  ingressClassName: nginx
